--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "gitignore": "^0.7.0",
+    "mongoose": "^8.5.1",
     "nodemon": "^3.1.4",
     "socket.io": "^4.7.5"
   }
